编译Unity.Model 前执行编译Unity.sln任务 这样只build client-server就可以

--- a/Unity/Unity.Model.csproj
+++ b/Unity/Unity.Model.csproj
@@ -603,4 +603,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
+  <Target Name="BeforeBuild">
+    <Message Text="Build Unity.sln"/>
+    <Exec Command="dotnet build Unity.sln"/>
+  </Target>
 </Project>
