服务器，机器人均测试通过，合并完成！

--- a/Apps/App/Apps.App.csproj
+++ b/Apps/App/Apps.App.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>ET</RootNamespace>
     <LangVersion>8</LangVersion>
-    <AssemblyName>Server</AssemblyName>
+    <AssemblyName>Apps</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup>
