1.调整目录结构 2.由于没有了机器人，那么ThirdParty目录没有了共享的必要，放到了Apps目录 3.Tools也放到了Apps目录，改名为Tool

--- a/Apps/App/ET.App.csproj
+++ b/Apps/App/ET.App.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>ET</RootNamespace>
     <LangVersion>8</LangVersion>
-    <AssemblyName>Apps</AssemblyName>
+    <AssemblyName>App</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -32,6 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Model\Apps.Model.csproj" />
+    <ProjectReference Include="..\Model\ET.Model.csproj" />
   </ItemGroup>
 </Project>
