调整工程名字

--- a/Apps/Hotfix/Apps.Hotfix.csproj
+++ b/Apps/Hotfix/Apps.Hotfix.csproj
@@ -45,6 +45,6 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Model\ET.Model.csproj" />
+    <ProjectReference Include="..\Model\Apps.Model.csproj" />
   </ItemGroup>
 </Project>
