--- a/Apps/App/Apps.App.csproj
+++ b/Apps/App/Apps.App.csproj
@@ -32,6 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Model\ET.Model.csproj" />
+    <ProjectReference Include="..\Model\Apps.Model.csproj" />
   </ItemGroup>
 </Project>
