--- a/Apps/Tool/Apps.Tool.csproj
+++ b/Apps/Tool/Apps.Tool.csproj
@@ -7,7 +7,7 @@
         <Nullable>disable</Nullable>
         <RootNamespace>ET</RootNamespace>
         <LangVersion>8</LangVersion>
-        <PackageId>ET.Tool</PackageId>
+        <PackageId>Apps.Tool</PackageId>
         <AssemblyName>Tool</AssemblyName>
     </PropertyGroup>
 
@@ -58,7 +58,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\ThirdParty\ET.ThirdParty.csproj" />
+      <ProjectReference Include="..\ThirdParty\Apps.ThirdParty.csproj" />
     </ItemGroup>
 
 </Project>
