命名空间调整，服务端是ET.Server 客户端是ET.Client，共享的代码是ET

--- a/Apps/Hotfix/Apps.Hotfix.csproj
+++ b/Apps/Hotfix/Apps.Hotfix.csproj
@@ -43,6 +43,10 @@
     <Compile Include="..\..\Unity\Codes\Hotfix\Client\**\*.cs">
       <Link>Client\%(RecursiveDir)%(FileName)%(Extension)</Link>
     </Compile>
+
+    <Compile Include="..\..\Unity\Codes\Hotfix\Share\**\*.cs">
+      <Link>Share\%(RecursiveDir)%(FileName)%(Extension)</Link>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Model\Apps.Model.csproj" />
