加上软路由

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,6 @@ Server/.DS_Store
 /Unity/Assets/Bundles/Code/Code.pdb.bytes
 /Unity/Assets/Bundles/Code/Code.pdb.bytes.meta
 /Unity/Assembly-CSharp.csproj
-/Excel/~$*.xlsx
+~$*.xlsx
 /.vscode
 /Unity/UserSettings/Search.settings
