--- a/Unity/Assets/ModelView/Unity.ModelView.asmdef
+++ b/Unity/Assets/ModelView/Unity.ModelView.asmdef
@@ -1,10 +1,10 @@
 {
     "name": "Unity.ModelView",
-    "rootNamespace": "",
+    "rootNamespace": "ET",
     "references": [
-        "GUID:61be00357cd206e42a4338fff3f5d273",
-        "GUID:6e17cd4649ea94c0cb18f30a60b9b4b4",
-        "GUID:1aa3e8589868c80499255710874679c0"
+        "Unity.Model",
+        "Unity.Mono",
+        "Unity.ThirdParty"
     ],
     "includePlatforms": [
         "Editor"
