--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ Server/.DS_Store
 ~$*.xlsx
 /.vscode
 /Unity/UserSettings/Search.settings
+/Unity/Unity.Hotfix.csproj
+/Unity/Unity.HotfixView.csproj
+/Unity/Unity.Model.csproj
+/Unity/Unity.ModelView.csproj
+
