mono层要引用http库，否则打包出来热更层无法使用

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ Server/.DS_Store
 /Unity/Unity.Model.csproj
 /Unity/Unity.ModelView.csproj
 
+/Unity/ProjectSettings/RiderScriptEditorPersistedState.asset
