--- a/Unity/Assets/Mono/Unity.Mono.asmdef
+++ b/Unity/Assets/Mono/Unity.Mono.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "Unity.Mono",
-    "rootNamespace": "",
+    "rootNamespace": "ET",
     "references": [
         "Unity.ThirdParty"
     ],
