去掉NOT_UNITY跟SERVER宏，用UNITY跟APPS宏代替

--- a/Apps/Tool/Apps.Tool.csproj
+++ b/Apps/Tool/Apps.Tool.csproj
@@ -19,14 +19,14 @@
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <OutputPath>..\..\Bin\</OutputPath>
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-      <DefineConstants>TRACECOREAPP;NOT_UNITY</DefineConstants>
+      <DefineConstants>TRACECOREAPP;NOT_UNITY;APPS</DefineConstants>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <OutputPath>..\..\Bin\</OutputPath>
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-      <DefineConstants>TRACECOREAPP;NOT_UNITY</DefineConstants>
+      <DefineConstants>TRACECOREAPP;NOT_UNITY;APPS</DefineConstants>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
     
