--- a/Apps/Hotfix/Apps.Hotfix.csproj
+++ b/Apps/Hotfix/Apps.Hotfix.csproj
@@ -10,12 +10,12 @@
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DefineConstants>TRACE2_0;NOT_UNITY;SERVER;</DefineConstants>
+        <DefineConstants>TRACE2_0;NOT_UNITY;APPS;</DefineConstants>
         <OutputPath>..\..\Bin\</OutputPath>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DefineConstants>TRACE2_0;SERVER;NOT_UNITY</DefineConstants>
+        <DefineConstants>TRACE2_0;SERVER;NOT_UNITY;APPS</DefineConstants>
         <OutputPath>..\..\Bin\</OutputPath>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
@@ -49,7 +49,7 @@
         </Compile>
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\Model\Apps.Model.csproj"/>
-        <ProjectReference Include="..\..\Share\Analyzer\Share.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
+        <ProjectReference Include="..\Model\Apps.Model.csproj" />
+        <ProjectReference Include="..\..\Share\Analyzer\Share.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 </Project>
