--- a/Apps/Model/Apps.Model.csproj
+++ b/Apps/Model/Apps.Model.csproj
@@ -10,13 +10,13 @@
         <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DefineConstants>TRACE2_0;NOT_UNITY;SERVER</DefineConstants>
+        <DefineConstants>TRACE2_0;NOT_UNITY;APPS</DefineConstants>
         <OutputPath>..\..\Bin\</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DefineConstants>TRACE2_0;SERVER;NOT_UNITY</DefineConstants>
+        <DefineConstants>TRACE2_0;SERVER;NOT_UNITY;APPS</DefineConstants>
         <OutputPath>..\..\Bin\</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
