禁止警告，所有警告当成错误

--- a/Unity/Directory.Build.props
+++ b/Unity/Directory.Build.props
@@ -1,5 +1,7 @@
 <Project>
   <PropertyGroup>
     <LangVersion>10.0</LangVersion>
+    <NoWarn>0169,0649,3021</NoWarn>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 </Project>
