1.Config跟Navmesh的加载改成统一回调 2.TimerType删除，使用统一回调，避免冲突

--- a/Apps/Tool/Apps.Tool.csproj
+++ b/Apps/Tool/Apps.Tool.csproj
@@ -37,17 +37,17 @@
         <Compile Include="..\..\Unity\Assets\Mono\Core\**\*.cs">
             <Link>Core\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
-
-        <Compile Include="..\..\Apps\Model\Base\**\*.cs">
-            <Link>Base\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
+        
         <Compile Include="..\..\Unity\Codes\Model\Module\Config\**\*.cs">
             <Link>Module\Config\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
         <Compile Include="..\..\Unity\Codes\Model\Module\Message\OpcodeRangeDefine.cs">
             <Link>Module\Message\OpcodeRangeDefine.cs</Link>
+        </Compile>
+
+        <Compile Include="..\Model\Base\NLogger.cs">
+          <Link>Base\NLogger.cs</Link>
         </Compile>
     </ItemGroup>
     
