--- a/Apps/Model/Apps.Model.csproj
+++ b/Apps/Model/Apps.Model.csproj
@@ -23,75 +23,18 @@
     </PropertyGroup>
     <ItemGroup>
 
-
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\Recast\**\*.cs">
-            <Link>Module\Recast\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-
         <Compile Include="..\..\Unity\Assets\Mono\Core\**\*.cs">
             <Link>Core\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
-        <Compile Include="..\..\Unity\Codes\Model\Module\Config\**\*.cs">
-            <Link>Module\Config\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\ObjectWait\**\*.cs">
-            <Link>Module\ObjectWait\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\Timer\**\*.cs"> 
-            <Link>Module\Timer\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\AI\**\*.cs">
-            <Link>Module\AI\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\CoroutineLock\**\*.cs">
-            <Link>Module\CoroutineLock\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\Actor\**\*.cs"> 
-            <Link>Module\Actor\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\ActorLocation\**\*.cs">
-            <Link>Module\ActorLocation\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Assets\Mono\Module\NetworkTCP\**\*.cs">
-            <Link>Module\NetworkTCP\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-        <Compile Include="..\..\Unity\Codes\Model\Module\Numeric\**\*.cs">
-            <Link>Module\Numeric\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Assets\Mono\Module\Network\**\*.cs">
-            <Link>Module\Network\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\Message\**\*.cs">
-            <Link>Module\Message\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Assets\Mono\Module\Message\**\*.cs">
-            <Link>Module\Message\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\Move\**\*.cs">
-            <Link>Module\Move\%(RecursiveDir)%(FileName)%(Extension)</Link>
-        </Compile>
-
-        <Compile Include="..\..\Unity\Codes\Model\Module\Unit\**\*.cs">
-            <Link>Module\Unit\%(RecursiveDir)%(FileName)%(Extension)</Link>
+        <Compile Include="..\..\Unity\Codes\Model\Module\**\*.cs">
+            <Link>Module\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
 
         <Compile Include="..\..\Unity\Codes\Model\Client\**\*.cs"> 
             <Link>Client\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
+        
         <Compile Include="..\..\Unity\Codes\Model\Share\**\*.cs">
             <Link>Share\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
