EventSystem去掉了Assembly，简化了代码

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ Server/.DS_Store
 /Unity/Unity.ModelView.csproj
 
 /Unity/ProjectSettings/RiderScriptEditorPersistedState.asset
+/Unity/Unity.Core.csproj
