调整代码目录，更新运行指南

--- a/Apps/Model/Apps.Model.csproj
+++ b/Apps/Model/Apps.Model.csproj
@@ -44,4 +44,7 @@
         <ProjectReference Include="..\ThirdParty\Apps.ThirdParty.csproj" />
         <ProjectReference Include="..\..\Share\Analyzer\Share.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Server\Map" />
+    </ItemGroup>
 </Project>
