--- a/.gitignore
+++ b/.gitignore
@@ -39,11 +39,11 @@ _ReSharper.CSharp/
 /Release
 .idea/
 /Unity/Logs
-/Unity/Bundles
-/Unity/HuatuoData/AssembliesPostIl2CppStrip
-/Unity/HuatuoData/huatuo_repo
-/Unity/HuatuoData/il2cpp_huatuo_repo
-/Unity/HuatuoData/LocalIl2CppData
+/Unity/Bundles/
+/Unity/HuatuoData/AssembliesPostIl2CppStrip/
+/Unity/HuatuoData/huatuo_repo/
+/Unity/HuatuoData/il2cpp_huatuo_repo/
+/Unity/HuatuoData/LocalIl2CppData/
 /Unity/Assets/StreamingAssets/
 /netcoreapp2.0
 /Unity/Assets/StreamingAssets.meta
