调整代码编译以及初始化方式，使用回调方式初始化代码，可以选择客户端代码编译方式，有三种： Client 仅编译客户端代码，仅做客户端使用 Server 仅编译服务端代码，可以把Unity打包成服务端，很多项目想用Unity当server，可以使用这种模式 ClientServer 编译客户端跟服务端代码，该模式下，客户端里面带有一个服务端，可以自己连接自己身上的服务端，就不用额外启动一个服务端了

--- a/DotNet/Hotfix/DotNet.Hotfix.csproj
+++ b/DotNet/Hotfix/DotNet.Hotfix.csproj
@@ -37,4 +37,9 @@
         <ProjectReference Include="..\..\Codes\Analyzer\Share.Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\Model\DotNet.Model.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="..\..\Codes\Hotfix\Share\Demo">
+        <Link>Share\Demo</Link>
+      </Folder>
+    </ItemGroup>
 </Project>
