--- a/DotNet/Model/DotNet.Model.csproj
+++ b/DotNet/Model/DotNet.Model.csproj
@@ -42,6 +42,10 @@
         <Compile Include="..\..\Codes\Generate\Server\**\*.cs">
             <Link>Generate\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile>
+
+        <Compile Update="ConfigLoader.cs">
+          <Link>Server\Module\Config\ConfigLoader.cs</Link>
+        </Compile>
         
     </ItemGroup> 
     <ItemGroup> 
