忽略一些配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ Server/.DS_Store
 
 /Unity/ProjectSettings/RiderScriptEditorPersistedState.asset
 /Unity/Unity.Core.csproj
+/Unity/UserSettings
+/Unity/UserSettings
