--- a/Unity/Assets/Mono/Unity.Mono.asmdef
+++ b/Unity/Assets/Mono/Unity.Mono.asmdef
@@ -2,7 +2,8 @@
     "name": "Unity.Mono",
     "rootNamespace": "",
     "references": [
-        "Unity.ThirdParty"
+        "Unity.ThirdParty",
+        "YooAsset"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
