--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
-    "com.unity.ide.rider": "3.0.7",
-    "com.unity.ide.visualstudio": "2.0.14",
-    "com.unity.render-pipelines.universal": "10.8.1",
+    "com.tuyoogame.yooasset": "1.2.0",
+    "com.unity.ide.rider": "3.0.15",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.render-pipelines.universal": "10.9.0",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.2",
+    "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
@@ -34,5 +35,14 @@
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.wind": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "Name: package.openupm.cn",
+      "url": "https://package.openupm.cn",
+      "scopes": [
+        "com.tuyoogame.yooasset"
+      ]
+    }
+  ]
 }
