--- a/Unity/Assets/Mono/Unity.Mono.asmdef
+++ b/Unity/Assets/Mono/Unity.Mono.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "Unity.ThirdParty",
-        "YooAsset"
+        "YooAsset",
+        "UniTask"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
