feat:服务器添加UniTask
Signed-off-by: Carson Lin <396098651@qq.com>

--- a/Server/Hotfix/Server.Hotfix.csproj
+++ b/Server/Hotfix/Server.Hotfix.csproj
@@ -39,6 +39,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="UniTask" Version="2.3.1" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\Tools\Analyzer\Analyzer.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\Model\Server.Model.csproj" />
   </ItemGroup>
