插件机制，Codes增加Plugins目录，里面可以放大家写好的插件，仿照Example目录防止就行了，会自动引用代码

--- a/DotNet/Hotfix/DotNet.Hotfix.csproj
+++ b/DotNet/Hotfix/DotNet.Hotfix.csproj
@@ -21,6 +21,18 @@
     </PropertyGroup>
     <ItemGroup>
 
+        <Compile Include="..\..\Codes\Plugins\*\Hotfix\Server\**\*.cs">
+            <Link>Server\Plugins\$([System.String]::new(%(RecursiveDir)).Replace('Hotfix\Server', ''))%(FileName)%(Extension)</Link>
+        </Compile>
+
+        <Compile Include="..\..\Codes\Plugins\*\Hotfix\Client\**\*.cs">
+            <Link>Client\Plugins\$([System.String]::new(%(RecursiveDir)).Replace('Hotfix\Client', ''))%(FileName)%(Extension)</Link>
+        </Compile>
+
+        <Compile Include="..\..\Codes\Plugins\*\Hotfix\Share\**\*.cs">
+            <Link>Share\Plugins\$([System.String]::new(%(RecursiveDir)).Replace('Hotfix\Share',''))%(FileName)%(Extension)</Link>
+        </Compile>
+
         <Compile Include="..\..\Codes\Hotfix\Client\**\*.cs">
             <Link>Client\%(RecursiveDir)%(FileName)%(Extension)</Link>
         </Compile> 
