Libs跟Analyzer挪到Share目录

--- a/Share/Analyzer/Share.Analyzer.csproj
+++ b/Share/Analyzer/Share.Analyzer.csproj
@@ -7,6 +7,11 @@
         <LangVersion>10</LangVersion>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
+    </PropertyGroup>
+
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
         <NoWarn>1701;1702;RS2008</NoWarn>
