服务端Model跟Hotfix完全共享，DotNet相关代码挪到DotNet.App程序集

--- a/.gitignore
+++ b/.gitignore
@@ -67,4 +67,5 @@ Server/.DS_Store
 /Unity/ProjectSettings/RiderScriptEditorPersistedState.asset
 /Unity/Unity.Core.csproj
 /Unity/UserSettings
-/Unity/Assets/Scripts/Codes/Link/
+/Unity/Unity.Codes.csproj
+/Unity/Unity.Ignore.csproj
