--- a/DotNet/App/DotNet.App.csproj
+++ b/DotNet/App/DotNet.App.csproj
@@ -34,4 +34,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Model\DotNet.Model.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="ReloadDllConsoleHandler.cs">
+      <Link>Server\Module\Console\ReloadDllConsoleHandler.cs</Link>
+    </Compile>
+  </ItemGroup>
 </Project>
