--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "com.unity.ide.rider": "3.0.15",
+    "com.unity.ide.visualstudio": "2.0.16",
+    "com.unity.ide.vscode": "1.2.5",
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.1",
