增加linux发布脚本Publish-linux-x64.ps1 Tool移到Share中

--- a/DotNet/Model/DotNet.Model.csproj
+++ b/DotNet/Model/DotNet.Model.csproj
@@ -20,6 +20,7 @@
         <OutputPath>..\..\Bin\</OutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <Optimize>false</Optimize>
     </PropertyGroup>
     <ItemGroup>
 
