ENABLE_CODES模式下，Unity.Codes程序集拆分成4个程序集，解决分析器失效的问题

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,8 @@ Publish/
 /Unity/Assets/Bundles/AssetBundleOutput
 /Unity/Assets/Bundles/AssetBundleSourceData
 /Unity/Assets/Bundles/AssetBundleSourceData.meta
+/Unity/Unity.Editor.Codes.csproj
+/Unity/Unity.Hotfix.Codes.csproj
+/Unity/Unity.HotfixView.Codes.csproj
+/Unity/Unity.Model.Codes.csproj
+/Unity/Unity.ModelView.Codes.csproj
