--- a/DotNet/Core/DotNet.Core.csproj
+++ b/DotNet/Core/DotNet.Core.csproj
@@ -18,7 +18,7 @@
       <DefineConstants>DOTNET</DefineConstants>
       <OutputPath>..\..\Bin\</OutputPath>
       <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-      <Optimize>true</Optimize>
+      <Optimize>false</Optimize>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">  
